--- a/templates/home.html
+++ b/templates/home.html
@@ -82,6 +82,7 @@
                         <div class="ecommerce-right-hny col-lg-8">
                             
                             <div class="ecom-products-grids row" id="itemsGrid">
+                                {% if items.count > 0 %}
                                 {% for item in items %}
                                 <div class="col-lg-4 col-6 product-incfhny mt-4">
                                     <div class="product-grid2 shopv">   
@@ -115,7 +116,12 @@
                                         </div>
                                     </div>
                                 </div>
+                                
                                 {% endfor %}
+                                
+                                {% else %}
+                                <h3>There is no item for this category</h3>
+                                {% endif %}
                                 
     
                             </div>
@@ -180,8 +186,10 @@
         .then(response => response.json())
         .then(data => {
             if (data.success){
+                const c = true;
                 updateItemGrid(data.items);
                 console.log(data.items);
+               
             } else {
                 alert(data.message);
             }
@@ -196,39 +204,48 @@
         var ItemsGrid = document.querySelector('.ecom-products-grids');
         ItemsGrid.innerHTML = '';
         var count = 0;
-        items.forEach(function(item){
-            count += 1;
-            var itemHTML = `<div class="col-lg-4 col-6 product-incfhny mt-4">
-                <div class="product-grid2 shopv">   
-                    <div class="product-image2">
-                        <a href="{% if item.slug %}{% url 'products:get_product' item.slug %}{% endif %}">
-                            <img class="pic-1 img-fluid radius-image" src="${item.image}">
-                            <img class="pic-2 img-fluid radius-image" src="${item.image}">
-                        </a>
-                        <ul class="social">
-                            <li><a href="{% if item.slug %}{% url 'products:get_product' item.slug %}{% endif %}" data-tip="Quick View"><span class="fa fa-eye"></span></a></li>
-                            <li><a href="products.html" data-tip="Add to Cart"><span class="fa fa-shopping-bag"></span></a></li>
-                        </ul>
-                        <div class="shopv single-item">
-                            <form action="#" method="post">
-                                <input type="hidden" name="cmd" value="_cart">
-                                <input type="hidden" name="add" value="1">
-                                <input type="hidden" name="shopv_item" value="Checkered Casual Shirt">
-                                <input type="hidden" name="amount" value="899.99">
-                                <button type="submit" class="shopv-cart pshopv-cart add-to-cart">Add to Cart</button>
-                            </form>
+            let found = false;
+            items.forEach(function(item){
+                count += 1;
+                found = true;
+                var itemHTML = `<div class="col-lg-4 col-6 product-incfhny mt-4">
+                    <div class="product-grid2 shopv">   
+                        <div class="product-image2">
+                            <a href="{% if item.slug %}{% url 'products:get_product' item.slug %}{% endif %}">
+                                <img class="pic-1 img-fluid radius-image" src="${item.image}">
+                                <img class="pic-2 img-fluid radius-image" src="${item.image}">
+                            </a>
+                            <ul class="social">
+                                <li><a href="{% if item.slug %}{% url 'products:get_product' item.slug %}{% endif %}" data-tip="Quick View"><span class="fa fa-eye"></span></a></li>
+                                <li><a href="products.html" data-tip="Add to Cart"><span class="fa fa-shopping-bag"></span></a></li>
+                            </ul>
+                            <div class="shopv single-item">
+                                <form action="#" method="post">
+                                    <input type="hidden" name="cmd" value="_cart">
+                                    <input type="hidden" name="add" value="1">
+                                    <input type="hidden" name="shopv_item" value="Checkered Casual Shirt">
+                                    <input type="hidden" name="amount" value="899.99">
+                                    <button type="submit" class="shopv-cart pshopv-cart add-to-cart">Add to Cart</button>
+                                </form>
+                            </div>
+                        </div>
+                        <div class="product-content">
+                            <h3 class="title"><a href="product-single.html">${item.item_name}</a></h3>
+                            <span class="price"><del>$975.00</del>${item.price}</span>
                         </div>
                     </div>
-                    <div class="product-content">
-                        <h3 class="title"><a href="product-single.html">${item.item_name}</a></h3>
-                        <span class="price"><del>$975.00</del>${item.price}</span>
-                    </div>
-                </div>
-            </div>`;
-            
+                </div>`;
+                
 
-            ItemsGrid.insertAdjacentHTML('beforeend', itemHTML);
-        });
+                ItemsGrid.insertAdjacentHTML('beforeend', itemHTML);
+            });
+            if(!found){
+                var itemHTML = `<h3 class="text-center">There is nothing in this category for now`;
+                
+
+                ItemsGrid.insertAdjacentHTML('beforeend', itemHTML);
+            }
+        
         document.getElementById('itemCount').innerText = count;
     }
 </script>
