--- a/templates/products/buy.html
+++ b/templates/products/buy.html
@@ -16,7 +16,7 @@
                     <div class="w3breadcrumb-right">
                         <ul class="breadcrumbs-custom-path">
                             <li><a href="">Products</a></li>
-                            <li class=""><span class="fas fa-angle-double-right mx-2"></span><a href=""> Buy {{items.first.category_name.category_type|upper}} <a></li>
+                            <li class=""><span class="fas fa-angle-double-right mx-2"></span><a href=""> Buy {{items.first.category_name.category_type|upper}} </a></li>
                         </ul>
                     </div>
                 </div>
@@ -33,24 +33,36 @@
                 <div class="container py-lg-5">
                     <div class="ecommerce-grids row">
                         
-                        <!-- /row-->
-                        <div class="ecommerce-right-hny col-lg-12">
-                            <div class="row ecomhny-topbar">
-                                <div class="col-6 ecomhny-result">
-                                    <h4 class="ecomhny-result-count"> Showing all <span id="itemCount">{{ items.count }}</span> Results</h4>
-                                </div>
-                                <div class="col-6 ecomhny-topbar-ordering">
+                        <div class="ecommerce-left-hny col-lg-4">
+                            <!--/ecommerce-left-hny-->
+                            <aside class="pe-lg-4">
+                                <div class="sider-bar">
+                                    <!-- /Gallery-imgs -->
     
-                                    <div class="ecom-ordering-select d-flex">
-                                        <span class="fa fa-angle-down" aria-hidden="true"></span>
-                                        <select id="categorySelect">
-                                            <option value="All" selected="selected" >All</option>
+                                    <div class="single-gd mb-5">
+                                        <h4>Product Categories</h4>
+                                        <ul class="list-group single">
+                                            {% for category in categories %}
+                                            <li class="list-group-item d-flex justify-content-between align-items-center">
+                                                <span class="cat_name">{{category.category_name}}</span>
+                                                <span class="badge badge-primary badge-pill">{{category.item.count}}</span>
+                                            </li>
+                                            {% endfor %}
                                             
-                                        </select>
+                                            </li>
+                                        </ul>
                                     </div>
+                                    
     
+                                   
                                 </div>
-                            </div>
+                            </aside>
+                            <!--//ecommerce-left-hny-->
+                        </div>
+
+                        <!-- /row-->
+                        <div class="ecommerce-right-hny col-lg-8">
+                            
                             <div class="ecom-products-grids row" id="itemsGrid">
                                 {% for item in items %}
                                 <div class="col-lg-4 col-6 product-incfhny mt-4">
@@ -81,74 +93,17 @@
                                         </div>
                                         <div class="product-content">
                                             <h3 class="title"><a href="product-single.html">{{item.item_name}} </a></h3>
-                                            <a href="{% url 'products:get_product' item.slug %}">
-                                            <div class="d-flex justify-content-around">
-                                           
-                                                <span class="">
-                                                
-                                                {% if request.user.is_authenticated %}
-                                                {% for liked in item.liked_by.all %}
-                                                    {% if liked.user == request.user %}
-                                                    <i class="0 heart-icon price fas fa-thumbs-down" data-slug="{{ item.slug }}" aria-hidden="true"></i>
-                                                    {% else %}
-                                                        {% if forloop.last %}
-                                                        <i class="1 heart-icon price fas fa-thumbs-up" data-slug="{{ item.slug }}" aria-hidden="true"></i>
-                                                        {% endif %}
-                                                    {% endif %}
-                                                    {% empty %}
-                                                    <i class="2 heart-icon price fas fa-thumbs-up" data-slug="{{ item.slug }}" aria-hidden="true"></i>
-                                                    {% endfor %}
-                                                    
-                                                {% else %}
-                                                <i class="4 heart-icon price fas fa-thumbs-up" data-slug="{{ item.slug }}" aria-hidden="true"></i>
-                                                {% endif %}
-
-                                                {{item.likes}}</span>
-                                                <span class="price">{{item.price}} <i class="fas fa-rupee-sign"></i></span>
-                                                
-                                            </div>
-                                        </a>
+                                            <span class="price"><del>$975.00</del>{{item.price}}</span>
                                         </div>
                                     </div>
                                 </div>
+                                {% empty %}
+                                <h3>There is nothing for now</h3>
                                 {% endfor %}
                                 
     
                             </div>
-                            {% comment %} <div class="row w3l-3-grids mt-5">
-                                <div class="col-md-6 mt-md-0">
-                                    <div class="grids3-info position-relative">
-                                        <a href="products-1.html" class="d-block zoom"><img src="assets/images/banner5.jpg" alt="" class="img-fluid news-image"></a>
-                                        <div class="w3-grids3-info">
-                                            <h4 class="gdnhy-1"><a href="products.html">Platform Velvet <br>Sandals</a>
-    
-                                            </h4>
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="col-md-6 mt-md-0 mt-4 grids3-info2">
-                                    <div class="grids3-info second position-relative">
-                                        <a href="products-1.html" class="d-block zoom"><img src="assets/images/banner4.jpg" alt="" class="img-fluid news-image"></a>
-                                        <div class="w3-grids3-info second">
-                                            <h4 class="gdnhy-1"><a href="products.html">Pebbled Weekend <br>Bag</a>
-    
-                                            </h4>
-    
-                                        </div>
-                                    </div>
-                                </div>
-    
-                            </div>
-                            <div class="pagination">
-                                <ul>
-                                    <li class="prev"><a href="#page-number"><span class="fa fa-angle-double-left"></span></a></li>
-                                    <li><a href="#page-number" class="active">1</a></li>
-                                    <li><a href="#page-number">2</a></li>
-                                    <li><a href="#page-number">3</a></li>
-    
-                                    <li class="next"><a href="#page-number"><span class="fa fa-angle-double-right"></span></a></li>
-                                </ul>
-                            </div> {% endcomment %}
+                            
                         </div>
                     </div>
     
@@ -157,8 +112,81 @@
         </section>
 {% endblock %}
 
-{% block script_js %}
+{% block js %}
 
+<script>
+    document.querySelectorAll('.cat_name').forEach(item => {
+        item.addEventListener('click', function() {
+            var category_name = this.innerText.trim(); // Extract the category name from the clicked element
+            fetchProducts(category_name); // Fetch products for the selected category
+        });
+    });
+
+    function fetchProducts(category){
+        fetch("{% url 'home:home'%}category_item/?category=" + category)
+        .then(response => response.json())
+        .then(data => {
+            if (data.success){
+                updateItemGrid(data.items);
+                console.log(data.items);
+            } else {
+                alert(data.message);
+            }
+        })
+        .catch(error => {
+            alert(error);
+            console.log(error);
+        });
+    }
+
+    function updateItemGrid(items){
+        var ItemsGrid = document.querySelector('.ecom-products-grids');
+        ItemsGrid.innerHTML = '';
+        var count = 0;
+        let found = false;
+        items.forEach(function(item){
+            count += 1;
+            found = true;
+            var itemHTML = `<div class="col-lg-4 col-6 product-incfhny mt-4">
+                <div class="product-grid2 shopv">   
+                    <div class="product-image2">
+                        <a href="{% if item.slug %}{% url 'products:get_product' item.slug %}{% endif %}">
+                            <img class="pic-1 img-fluid radius-image" src="${item.image}">
+                            <img class="pic-2 img-fluid radius-image" src="${item.image}">
+                        </a>
+                        <ul class="social">
+                            <li><a href="{% if item.slug %}{% url 'products:get_product' item.slug %}{% endif %}" data-tip="Quick View"><span class="fa fa-eye"></span></a></li>
+                            <li><a href="products.html" data-tip="Add to Cart"><span class="fa fa-shopping-bag"></span></a></li>
+                        </ul>
+                        <div class="shopv single-item">
+                            <form action="#" method="post">
+                                <input type="hidden" name="cmd" value="_cart">
+                                <input type="hidden" name="add" value="1">
+                                <input type="hidden" name="shopv_item" value="Checkered Casual Shirt">
+                                <input type="hidden" name="amount" value="899.99">
+                                <button type="submit" class="shopv-cart pshopv-cart add-to-cart">Add to Cart</button>
+                            </form>
+                        </div>
+                    </div>
+                    <div class="product-content">
+                        <h3 class="title"><a href="product-single.html">${item.item_name}</a></h3>
+                        <span class="price"><del>$975.00</del>${item.price}</span>
+                    </div>
+                </div>
+            </div>`;
+            
+
+            ItemsGrid.insertAdjacentHTML('beforeend', itemHTML);
+        });
+        if(!found){
+            var itemHTML = `<h3 class="text-center">There is nothing in this category for now`;
+            
+
+            ItemsGrid.insertAdjacentHTML('beforeend', itemHTML);
+        }
+    
+    }
+</script>
 
 
 {% endblock %}
