--- a/templates/products/buy.html
+++ b/templates/products/buy.html
@@ -42,14 +42,12 @@
                                     <div class="single-gd mb-5">
                                         <h4>Product Categories</h4>
                                         <ul class="list-group single">
-                                            {% for category in categories %}
+                                            {% for category, unsold_items in unsold_items_by_category.items %}
                                             <li class="list-group-item d-flex justify-content-between align-items-center">
-                                                <span class="cat_name">{{category.category_name}}</span>
-                                                <span class="badge badge-primary badge-pill">{{category.item.count}}</span>
+                                                <span class="cat_name">{{ category.category_name }}</span>
+                                                <span class="badge badge-primary badge-pill">{{ unsold_items.count }}</span>
                                             </li>
-                                            {% endfor %}
-                                            
-                                            </li>
+                                            {% endfor %} 
                                         </ul>
                                     </div>
                                     
