search functionality added

--- a/templates/about.html
+++ b/templates/about.html
@@ -47,7 +47,7 @@
                         <p class="mt-2" style=" text-align:justify;">
                         <i class="fas fa-arrow-right"></i>This initiative serves a dual purpose. It allows individuals to earn by selling their scrap items, offering an opportunity for financial gain. Simultaneously, artists benefit from affordable materials, enabling them to showcase their creativity and generate income. Moreover, our platform actively supports the #VocalForLocal movement, encouraging local businesses and artisans.<br/>
                         </p>
-                        <p class="mt-2 " style=" text-align:justify;">
+                        <p class="mt-2 " style=" text-align:justify; transition: opacity 0.3s ease-in-out;">
                         <i  class="fas fa-arrow-right "></i>In addition to empowering sellers and artists, Re:Scrapify will contribute to making the world a better place. By recycling old items, we reduce waste and promote environmental sustainability. Each transaction echoes our commitment to a greener, more conscious world.
                         </p>
                     </div>
