--- a/templates/base.html
+++ b/templates/base.html
@@ -281,7 +281,7 @@ RIGHT SIDEBAR TOGGLE SECTION
                                             <h3 class="title-w3l two mb-4 text-left">Search Here</h3>
                                             <form action="{% url 'home:search' %}" method="GET" class="search-box d-flex position-relative">
                                                 <input type="search" placeholder="Enter Keyword here" name="search"
-                                                    required="required" autofocus="">
+                                                    required="required" autofocus="" class="form-control">
                                                 <button type="submit" class="btn"><span class="fas fa-search"
                                                         aria-hidden="true"></span></button>
                                             </form>
