--- a/templates/products/buy.html
+++ b/templates/products/buy.html
@@ -91,7 +91,7 @@
                                         </div>
                                         <div class="product-content">
                                             <h3 class="title"><a href="product-single.html">{{item.item_name}} </a></h3>
-                                            <span class="price"><del>$975.00</del>{{item.price}}</span>
+                                            <span class="price"><i class="fas fa-rupee-sign"></i> {{item.price}}</span>
                                         </div>
                                     </div>
                                 </div>
