--- a/templates/products/product.html
+++ b/templates/products/product.html
@@ -104,8 +104,8 @@
                                 {{item.likes}}</span>
 
                             <h6>
-                                <span class="item_price">{{item.price}} <i class="fas fa-rupee-sign"></i></span>
-                                <del>{{item.price }}</del> Free Delivery
+                                <span class="item_price"><i class="fas fa-rupee-sign"></i> {{item.price}}</span>
+                                 Free Delivery
                             </h6>
                         </div>
                         {% comment %} <div class="desc_single my-4">
