--- a/templates/home.html
+++ b/templates/home.html
@@ -111,7 +111,7 @@
                                         </div>
                                         <div class="product-content">
                                             <h3 class="title"><a href="product-single.html">{{item.item_name}} </a></h3>
-                                            <span class="price"><del>$975.00</del>{{item.price}}</span>
+                                            <span class="price"><i class="fas fa-rupee-sign"></i> {{item.price}}</span>
                                         </div>
                                     </div>
                                 </div>
@@ -119,7 +119,7 @@
                                 {% endfor %}
                                 
                                 {% else %}
-                                <h3>There is no item for this category</h3>
+                                <h3>There is no item related to your filter </h3>
                                 {% endif %}
                                 
     
